# wunder-trading-bot

./: .dockerignore  Dockerfile  analyze_results.py  params.json  pyproject.toml  requirements.txt  smart_trading_bot.py  state_BTCUSDT.json  trades_log.csv
