[tool.poetry]
name = "wunder-trading-bot"
version = "0.1.0"
description = "Smart trading bot running on Render"
authors = ["roque06"]

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "2.1.4"
ta = "0.11.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
